Fix play/pause icons not showing on mobile app / chrome

--- a/public/sass/components/schedule/schedule-radiolist.scss
+++ b/public/sass/components/schedule/schedule-radiolist.scss
@@ -16,12 +16,12 @@
       background-color: $success;
     }
 
-    mask-image: url('../../img/play-button-inside-a-circle.svg');
+    mask-image: url(/img/play-button-inside-a-circle.svg);
     mask-repeat: no-repeat;
     mask-position: center;
     mask-size: 75% 75%;
 
-    -webkit-mask-image: url('../../img/play-button-inside-a-circle.svg');
+    -webkit-mask-image: url(/img/play-button-inside-a-circle.svg);
     -webkit-mask-repeat: no-repeat;
     -webkit-mask-position: center;
     -webkit-mask-size: 70% 70%;
@@ -30,7 +30,7 @@
     @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
       background-color: transparent;
 
-      background-image: url('../../img/play-button-inside-a-circle.svg');
+      background-image: url(/img/play-button-inside-a-circle.svg);
       background-repeat: no-repeat;
       background-position: center;
       background-size: 75% 75%;
@@ -46,12 +46,12 @@
   }
 
   &.radio-logo-play-active:not(.radio-logo-play-paused) {
-    mask-image: url('../../img/rounded-pause-button.svg') !important;
-    -webkit-mask-image: url('../../img/rounded-pause-button.svg') !important;
+    mask-image: url(/img/rounded-pause-button.svg) !important;
+    -webkit-mask-image: url(/img/rounded-pause-button.svg) !important;
 
     /* IE only, default to black icon */
     @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-      background-image: url('../../img/rounded-pause-button.svg') !important;
+      background-image: url(/img/rounded-pause-button.svg) !important;
     }
   }
 }
